added some old blogs

--- a/themes/hugoplate/layouts/blog/list.html
+++ b/themes/hugoplate/layouts/blog/list.html
@@ -3,7 +3,7 @@
 
   <!-- blog intro content -->
   {{ if .Content }}
-  <section class="section pt-0">
+  <section class="section pt-0 pb-0">
     <div class="container">
       <div class="content">
         {{ .Content }}
